--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "4.4.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/roophanxp/Betrayal.git"
